added jdbc-psql classpath

--- a/game/pom.xml
+++ b/game/pom.xml
@@ -19,6 +19,14 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>pgjdbc-aggregate</artifactId>
+      <version>42.2.12</version>
+      <type>pom</type>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
