--- a/game/pom.xml
+++ b/game/pom.xml
@@ -20,12 +20,11 @@
 
   <dependencies>
 
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>pgjdbc-aggregate</artifactId>
-      <version>42.2.12</version>
-      <type>pom</type>
-    </dependency>
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.3.1</version>
+</dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
