--- a/game/pom.xml
+++ b/game/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.1</version>
+      <version>2.13.2.2</version>
     </dependency>
 
     <dependency>
@@ -42,8 +42,15 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>12.0.2</version>
+      <version>17.0.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>17.0.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -93,7 +100,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.8</version>
           <configuration>
-              <mainClass>hellofx/org.openjfx.App</mainClass>
+              <mainClass>org.openjfx.App</mainClass>
           </configuration>
         </plugin>
       </plugins>
